moved editor out of /editor because requirejs is lame

--- a/editor.css
+++ b/editor.css
@@ -40,7 +40,7 @@ body {
   width: 60;
   height: 60;
   background-color: #F0F;
-  background-image: url(../assets/tiles.png);
+  background-image: url(assets/tiles.png);
   z-index: 5;
   margin: 3px;
 }
