can now save and load sprites with the correct center points
update objects image, squrished objects up and to the left

--- a/editor.css
+++ b/editor.css
@@ -63,8 +63,9 @@ body {
 }
 
 .sprite.selected {
-  border: 2px solid #F50;
-  margin: 0px;
+  border: 1px solid #F50;
+  margin-left: -1px;
+  margin-top: -1px;
 }
 
 .list-tile {
