--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -1,18 +1,58 @@
 body {
   font-family: arial, helvetica, sans-serif;
 }
+#container {
+  position:relative;
+  top:20px;
+  left:20px;
+  width:900px;
+  height:600px;
+  border:5px solid black; 
+  border-radius: 5px;
+  -moz-border-radius: 5px; 
+  -webkit-border-radius: 5px;
+}
+
+#pause-overlay {
+  position:absolute;
+  display:none;
+  top:0px;
+  left:0px;
+  width:100%;
+  height:100%;
+  z-index:50;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7)), color-stop(.5,rgba(0,0,0,0.2)));
+}
+#pause-text-container {
+  position:absolute;
+  left:50%;
+  top:50%;
+}
+#pause {
+  font-size:150%;
+  position:relative;
+  left:-50%;
+  top:-10%;
+  padding:8px;
+  font-weight:bold;
+  color: #AAA;
+  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+               0px 8px 13px rgba(0,0,0,0.1);
+               /* 0px 18px 23px rgba(0,0,0,0.1); */
+}
+
 #hud-canvas { position:absolute; z-index:40; }
 #sky-canvas { position:absolute; z-index:30; }
 #canvas { position:absolute; z-index:20; }
-#canvas-mask { position:relative; border:1px solid black; top:20px; left:20px; width:900px; height:600px; z-index:30; overflow:hidden; }
+#canvas-mask { position:relative; z-index:30; overflow:hidden; }
 #background { position:relative; background:#93803A; z-index:10; width:900px; height:600px; overflow:hidden; }
 .tile { position:absolute; width:60px; height:60px; background-color:#000; background-image:url(../assets/tiles.png); z-index:5; background-position:60 0px; }
 #framerate { position:absolute; color:#000; z-index:50; right:5px; top:5px; display:none; background-color:#FFF; padding:4px; }
-#pause { position:absolute; background-color:#FFF; color:#000; z-index:50; left:45%; bottom:50%; padding:8px; font-weight:bold; display:none; }
 .active { display:block !important; }
 #leveldata { display:block }
 #progress { position:absolute; left:0px; top:0px; width:100%; height:10px; background-color:#000; z-index:50; opacity:0.5; display:none; }
 #progress-slider { width:0%; height:10px; background-color:red; }
+
 .flip-horizontal {
   -moz-transform: scaleX(-1);
   -webkit-transform: scaleX(-1);
