--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -20,7 +20,7 @@ body {
   left:0px;
   width:100%;
   height:100%;
-  z-index:50;
+  z-index:200;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7)), color-stop(.5,rgba(0,0,0,0.2)));
 }
 #pause-text-container {
@@ -41,7 +41,8 @@ body {
                /* 0px 18px 23px rgba(0,0,0,0.1); */
 }
 
-#hud-canvas { position:absolute; z-index:40; }
+/* nothing below the click overlay is clickable */
+#click-overlay { position:absolute; z-index:100; width:900px; height:600px; }
 #sky-canvas { position:absolute; z-index:30; }
 #canvas { position:absolute; z-index:20; }
 #canvas-mask { position:relative; z-index:30; overflow:hidden; }
@@ -116,7 +117,7 @@ body {
   position: absolute;
   right: 4px;
   top: 4px;
-  z-index: 100;
+  z-index: 110;
 }
 
 .inventory {
@@ -140,6 +141,7 @@ body {
 }
 .inventory-item {
   position: absolute;
+  cursor: pointer;
 }
 .inventory-item .readout {
   position: absolute;
