--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -195,10 +195,11 @@ body {
   top: 30px;
   display: none;
   z-index: 110;
-  border: 2px solid black;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
   overflow: hidden;
+  background-image:url(../assets/fuel-gauge.png);
+  background-color:black;
 }
 
 #fuel-gauge-needle {
