--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -217,3 +217,31 @@ body {
   -ms-transform-origin: 8px 50px;
   transform-origin: 8px 50px;
 }
+
+.tip {
+  position: absolute;
+  z-index: 200;
+  background: #ffcb66;
+  padding: 5px 15px;
+  color: black;
+  -webkit-border-radius: 10px;
+  -moz-border-radius   : 10px;
+  border-radius        : 10px;
+  white-space: nowrap;
+}
+
+.tip:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #ffcb66;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  /* At time of this creation, only Fx4 doing pseduo transitions */
+  /* -webkit-transition: all 0.4s ease; */
+  /* -moz-transition   : all 0.4s ease; */
+  /* opacity: 0; */
+  left: 30%;
+  top: 90%;
+}
