--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -44,7 +44,7 @@ body {
 /* nothing below the click overlay is clickable */
 #click-overlay { position:absolute; z-index:100; width:900px; height:600px; }
 #sky-canvas { position:absolute; z-index:30; }
-#canvas { position:absolute; z-index:20; width:900px; height:600px; }
+#sprites { position:absolute; z-index:20; width:900px; height:600px; }
 #canvas-mask {
   position:relative;
   z-index:30;
