hide sprites by default
so they don't show up in the upper left corner on load

--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -58,6 +58,7 @@ body {
 
 .sprite {
   position: absolute;
+  visibility: hidden;
 }
 
 #background { position:relative; background:#93803A; z-index:10; width:900px; height:600px; overflow:hidden; }
