--- a/stylesheets/editor.css
+++ b/stylesheets/editor.css
@@ -140,8 +140,11 @@ body {
   display: none;
 }
 
-.collidable {
+.entrance {
   border: dotted red 2px;
+  margin-top: -1px;
+  margin-left: -1px;
+  z-index: 7;
 }
 
 #coord-display {
