--- a/stylesheets/editor.css
+++ b/stylesheets/editor.css
@@ -140,6 +140,10 @@ body {
   display: none;
 }
 
+#new-building {
+  display: none;
+}
+
 .entrance {
   border: dotted blue 2px;
   margin-top: -1px;
