--- a/stylesheets/editor.css
+++ b/stylesheets/editor.css
@@ -151,6 +151,14 @@ body {
   z-index: 7;
 }
 
+.building {
+  position: absolute;
+  background-color:blue;
+  color:white;
+  padding: 2px;
+  z-index: 8;
+}
+
 #coord-display {
   display: none;
 };
