gascan is now working!

--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -278,3 +278,6 @@ body {
 .pump #click-overlay, .pump .gascan {
   cursor: url(../assets/pump-nozzle.png), auto !important;
 }
+.gascan #click-overlay, .gascan .gascan {
+  cursor: url(../assets/gascan-cursor.png), auto !important;
+}
