--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -1,5 +1,5 @@
 body {
-  font-family: arial, helvetica, sans-serif;
+  font-family: impact, helvetica, sans-serif;
 }
 #container {
   position:relative;
@@ -29,16 +29,15 @@ body {
   top:50%;
 }
 #pause {
-  font-size:150%;
+  font-size:300%;
   position:relative;
   left:-50%;
-  top:-10%;
+  top:-55px;
   padding:8px;
   font-weight:bold;
-  color: #AAA;
-  text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
-               0px 8px 13px rgba(0,0,0,0.1);
-               /* 0px 18px 23px rgba(0,0,0,0.1); */
+  color: rgba(0,48,64,0.8);
+  text-shadow: 0px 4px 3px rgba(0,18,34,0.4),
+               0px 8px 13px rgba(0,18,34,0.2);
 }
 
 /* nothing below the click overlay is clickable */
