--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -40,6 +40,33 @@ body {
                0px 8px 13px rgba(0,18,34,0.2);
 }
 
+#game-over-overlay {
+  position:absolute;
+  display:none;
+  top:0px;
+  left:0px;
+  width:100%;
+  height:100%;
+  z-index:200;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,1)), to(rgba(0,0,0,1)), color-stop(.5,rgba(0,0,0,0.7)));
+}
+#game-over-text-container {
+  position:absolute;
+  left:50%;
+  top:50%;
+}
+#game-over {
+  font-size:300%;
+  position:relative;
+  left:-50%;
+  top:-55px;
+  padding:8px;
+  font-weight:bold;
+  color: rgba(0,48,64,0.8);
+  text-shadow: 0px 4px 3px rgba(0,18,34,0.4),
+               0px 8px 13px rgba(0,18,34,0.2);
+}
+
 /* nothing below the click overlay is clickable */
 #click-overlay { position:absolute; z-index:100; width:900px; height:600px; }
 #sky-canvas { position:absolute; z-index:30; }
