--- a/stylesheets/editor.css
+++ b/stylesheets/editor.css
@@ -38,6 +38,11 @@ body {
   padding-top: 4px;
 }
 
+#archetype-list {
+  margin-left: 0px;
+  width: 100px;
+}
+
 #sprite-list {
   width: 100%;
   height: 60px;
@@ -125,7 +130,7 @@ body {
   z-index: 6;
 }
 
-#map.show-grid .tile {
+.show-grid .tile {
   border: 1px solid black;
 }
 
@@ -177,4 +182,10 @@ body {
 
 input[type=button].selected {
   color: blue;
+}
+
+.archetype-floater {
+  position: absolute;
+  z-index: 100;
+  opacity: 0.5;
 }
