--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -89,8 +89,12 @@ body {
 
 #background { position:relative; background:#93803A; z-index:10; width:900px; height:600px; overflow:hidden; }
 .tile { position:absolute; width:60px; height:60px; background-color:#000; background-image:url(../assets/tiles.png); z-index:5; background-position:60 0px; }
-#framerate { position:absolute; color:#000; z-index:150; right:130px; bottom:5px; display:none; background-color:#FFF; padding:4px; }
-#distance { position:absolute; color:#000; z-index:150; right:5px; bottom:5px; background-color:#FFF; padding:4px; }
+
+#lower-right { position:absolute; color:#000; z-index:150; right:5px; bottom:5px; cursor:default;}
+#framerate { color:#000; display:none; background-color:#FFF; padding:4px;}
+#time { color:#000; background-color:#FFF; padding:4px; cursor:pointer;}
+#distance { color:#000; background-color:#FFF; padding:4px;}
+
 .active { display:block !important; }
 #leveldata { display:block }
 #progress { position:absolute; left:0px; top:0px; width:100%; height:10px; background-color:#000; z-index:50; opacity:0.5; display:none; }
@@ -153,7 +157,7 @@ body {
 .heart.empty {
   color:#2F4F4F;
 }
-.crosshair { cursor: crosshair }
+.crosshair { cursor: crosshair; }
 
 #dude-inventory {
   position: absolute;
