--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -1,3 +1,20 @@
+/* 
+ * z-indices:
+ *
+ * 1000 for pause/game over overlays
+ *  800 for drag handlers
+ *  700 for canvas mask
+ *  600 for ui elements
+ *  500 for click overlay
+ *  400 for sky
+ *  100 for sprite container
+ *   10 for background container
+ *    5 for background tiles
+ *
+ * sprite z-indices between 100-200 are set based on y-axis
+ *
+ */
+
 body {
   font-family: impact, helvetica, sans-serif;
 }
@@ -20,7 +37,7 @@ body {
   left:0px;
   width:100%;
   height:100%;
-  z-index:200;
+  z-index:1000;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7)), color-stop(.5,rgba(0,0,0,0.2)));
 }
 #pause-text-container {
@@ -47,7 +64,7 @@ body {
   left:0px;
   width:100%;
   height:100%;
-  z-index:200;
+  z-index:1000;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,1)), to(rgba(0,0,0,1)), color-stop(.5,rgba(0,0,0,0.7)));
 }
 #game-over-text-container {
@@ -68,12 +85,12 @@ body {
 }
 
 /* nothing below the click overlay is clickable */
-#click-overlay { position:absolute; z-index:100; width:900px; height:600px; }
-#sky-canvas { position:absolute; z-index:30; }
-#sprites { position:absolute; z-index:20; width:900px; height:600px; }
+#click-overlay { position:absolute; z-index:500; width:900px; height:600px; }
+#sky-canvas { position:absolute; z-index:400; }
+#sprites { position:absolute; z-index:100; width:900px; height:600px; }
 #canvas-mask {
   position:relative;
-  z-index:30;
+  z-index:700;
   overflow:hidden;
   -moz-user-select: -moz-none;
   -khtml-user-select: none;
@@ -90,7 +107,7 @@ body {
 #background { position:relative; background:#93803A; z-index:10; width:900px; height:600px; overflow:hidden; }
 .tile { position:absolute; width:60px; height:60px; background-color:#000; background-image:url(../assets/tiles.png); z-index:5; background-position:60 0px; }
 
-#lower-right { position:absolute; color:#000; z-index:150; right:5px; bottom:5px; cursor:default;}
+#lower-right { position:absolute; color:#000; z-index:600; right:5px; bottom:5px; cursor:default;}
 #framerate { color:#000; display:none; background-color:#FFF; padding:4px; float:left; width:42px; }
 #distance { color:#000; background-color:#FFF; padding:4px; float:right; width:100px; }
 #time { color:#000; background-color:#FFF; padding:4px; cursor:pointer; float:right; }
@@ -100,12 +117,12 @@ body {
 
 .active { display:block !important; }
 #leveldata { display:block }
-#progress { position:absolute; left:0px; top:0px; width:100%; height:10px; background-color:#000; z-index:50; opacity:0.5; display:none; }
+#progress { position:absolute; left:0px; top:0px; width:100%; height:10px; background-color:#000; z-index:600; opacity:0.5; display:none; }
 #progress-slider { width:0%; height:10px; background-color:red; }
 
 #life {
   position:absolute;
-  z-index:50;
+  z-index:600;
   left:0px;
   top:0px;
   padding:2px 4px;
@@ -139,7 +156,7 @@ body {
   position: absolute;
   right: 4px;
   top: 4px;
-  z-index: 110;
+  z-index: 600;
   visibility: hidden;
 }
 
@@ -147,7 +164,7 @@ body {
   position: absolute;
   left: 4px;
   bottom: 4px;
-  z-index: 110;
+  z-index: 600;
   visibility: hidden;
 }
 
@@ -184,10 +201,10 @@ body {
   color: #BBB;
 }
 .ui-draggable {
-  z-index: 200;
+  z-index: 800;
 }
 .click-dragging {
-  z-index: 200;
+  z-index: 800;
 }
 
 #dude-hands {
@@ -217,7 +234,7 @@ body {
   left: 10px;
   top: 30px;
   display: none;
-  z-index: 110;
+  z-index: 600;
   border-top-left-radius: 60px;
   border-top-right-radius: 60px;
   border-bottom-left-radius: 5px;
@@ -249,7 +266,7 @@ body {
   left: 10px;
   top: 110px;
   background-image:url(../assets/check-engine.png);
-  z-index: 110;
+  z-index: 600;
 }
 
 #check-engine-light.lit {
@@ -264,7 +281,7 @@ body {
   left: 20px;
   top: 158px;
   background-image:url(../assets/fuel-low.png);
-  z-index: 110;
+  z-index: 600;
 }
 
 #low-fuel-light.lit {
@@ -288,7 +305,7 @@ body {
 
 .tip {
   position: absolute;
-  z-index: 200;
+  z-index: 600;
   background: #256;
   padding: 5px 15px;
   color: #DDD;
