--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -2,6 +2,7 @@
  * z-indices:
  *
  * 1000 for pause/game over overlays
+ *  900 for nuke
  *  800 for drag handlers
  *  700 for canvas mask
  *  600 for ui elements
@@ -388,4 +389,18 @@ body {
   width: 80%;
   margin-top: 100px;
   margin-left: 50px;
+}
+
+#nuke {
+  position: absolute;
+  left: 0px;
+  top: -1000px;
+  width: 2000px;
+  height: 2000px;
+  display: none;
+  background-color: #A22;
+  /* background-image: -webkit-linear-gradient(0, rgba(255,255,255,.07) 50%, transparent 50%), -webkit-linear-gradient(45deg, rgba(255,255,255,.13) 50%, transparent 50%), -webkit-linear-gradient(-45deg, transparent 50%, rgba(255,255,255,.17) 50%), -webkit-linear-gradient(30deg, transparent 50%, rgba(255,255,255,.19) 50%); */
+  /* background-size: 13px, 29px, 37px, 53px; */
+  z-index: 900;
+  -webkit-transform-origin: left center;
 }
