--- a/stylesheets/game.css
+++ b/stylesheets/game.css
@@ -29,7 +29,7 @@ body {
   -webkit-border-radius: 5px;
 }
 
-#pause-overlay {
+.overlay {
   position:absolute;
   display:none;
   top:0px;
@@ -37,42 +37,82 @@ body {
   width:100%;
   height:100%;
   z-index:1000;
+}
+
+.centering-container {
+  position:absolute;
+  left:50%;
+  top:50%;
+}
+
+#loading-screen {
+  color: white;
+  background-color: black;
+  display: block;
+}
+
+#main-screen {
+  color: white;
+  background-color: black;
+}
+
+#main-screen li {
+  font-size: 150%;
+  color: #ccc;
+  list-style: none;
+}
+
+#main-screen li:hover {
+  color: #aaa;
+  list-style-type: disc;
+  cursor: pointer;
+}
+
+#main-screen li:active {
+  color: #eee;
+}
+
+#title {
+  color: #ddd;
+  font-size:600%;
+  margin:100px;
+  color: #202c2d;
+  text-shadow:
+    0 1px #808d93,
+    -1px 0 #cdd2d5,
+    -1px 2px #808d93,
+    -2px 1px #cdd2d5,
+    -2px 3px #808d93,
+    -3px 2px #cdd2d5,
+    -3px 4px #808d93,
+    -4px 3px #cdd2d5,
+    -4px 5px #808d93,
+    -5px 4px #cdd2d5,
+    -5px 6px #808d93,
+    -6px 5px #cdd2d5,
+    -6px 7px #808d93,
+    -7px 6px #cdd2d5,
+    -7px 8px #808d93,
+    -8px 7px #cdd2d5;
+}
+
+#resume-game {
+  display:none;
+}
+
+#main-screen.pause {
+  background-color: transparent;
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7)), color-stop(.5,rgba(0,0,0,0.2)));
 }
 
-#pause-overlay .centering-container {
-  position:absolute;
-  left:50%;
-  top:50%;
-}
-#pause {
-  font-size:300%;
-  position:relative;
-  left:-50%;
-  top:-55px;
-  padding:8px;
-  font-weight:bold;
-  color: rgba(20,68,84,1);
-  text-shadow: 0px 4px 3px rgba(0,18,34,0.4),
-               0px 8px 13px rgba(0,18,34,0.2);
+.pause #resume-game {
+  display:list-item;
 }
 
-#game-over-overlay {
-  position:absolute;
-  display:none;
-  top:0px;
-  left:0px;
-  width:100%;
-  height:100%;
-  z-index:1000;
+#game-over-screen {
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,0,0,1)), to(rgba(0,0,0,1)), color-stop(.5,rgba(0,0,0,0.7)));
 }
 
-#game-over-overlay .centering-container {
-  position:absolute;
-  left:50%;
-  top:50%;
-}
 #game-over {
   font-size:300%;
   position:relative;
@@ -160,7 +200,7 @@ body {
 
 .active { display:block !important; }
 #leveldata { display:block }
-#progress { position:absolute; left:0px; top:0px; width:100%; height:10px; background-color:#000; z-index:600; opacity:0.5; display:none; }
+#progress { position:absolute; left:0px; top:50%; width:100%; height:10px; background-color:#000; z-index:600; opacity:0.8; display:none; }
 #progress-slider { width:0%; height:10px; background-color:red; }
 
 #life {
